# Challenge1-Experiencia_Conversacional

./: README.md  config.py  main.py  pyproject.toml
services/: scraping_elenco.py  scraping_partidas.py  scraping_rating.py
utils/: constants.py  elenco.py  loja.py  produtos.py  quiz.py  rating.py
