[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "furia-telegram-bot"
version = "0.1.0"
description = "Bot Telegram da FURIA CS com scraping e funcionalidades interativas."
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pyTelegramBotAPI",
    "requests",
    "beautifulsoup4",
    "selenium",
    "webdriver-manager"
]

[project.optional-dependencies]
dev = [
    "taskipy",
    "ruff",
]

[project.urls]
homepage = "https://github.com/TMVinicius/challenge-experiencia-conversacional-furia"
documentation = "https://github.com/TMVinicius/challenge-experiencia-conversacional-furia/README.md"

[tool.ruff]
line-length = 79

[tool.ruff.format]
preview = true
quote-style = "single"

[tool.ruff.lint]
select = ["I", "F", "E", "W", "PL", "PT"]

[tool.taskipy.tasks]
lint = "ruff check . && ruff check . --diff"
format = "ruff check . --fix && ruff format ."
run = "python main.py"
